fix to widget jumping arround page

--- a/assets/css/mozilla-universe.rewrite.css
+++ b/assets/css/mozilla-universe.rewrite.css
@@ -36,7 +36,7 @@
 	width : 100%;
 	display : block;
 }
-#mozilla-universe-widget.tab #mozilla-universe-overlay {
+#mozilla-universe-widget.tab .mozilla-universe-overlay {
 	display : none;
 }
 #mozilla-universe-toggle {
